# inertia

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  package.json
.cargo/: config.toml
.cursor/rules/: git-and-scope.mdc  host-os.mdc  rust-backend.mdc  svelte-frontend.mdc
.github/workflows/: release.yml
apps/desktop/: .gitignore  README.md  package-lock.json  package.json
apps/desktop/splash/: index.html
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: capacitor.config.ts  package-lock.json  package.json  svelte.config.js  vite-api-proxy.ts  vite.config.ts  vitest.config.ts
apps/web/android/app/: build.gradle
apps/web/scripts/: debug-profile.mjs  screenshot-files-tab.mjs
apps/web/src/: app.css  app.html
apps/web/src/lib/: api-base.ts  api-errors.ts  api.ts  conversation-open.ts  conversation-sync.ts  dev-commands.ts  device-db.ts  dm-unread.ts  dmThreads.ts  feed-sync.ts  identicon.ts  identity.svelte.ts  image.ts  invite-input.ts  live-sync.test.ts  local-cache.test.ts  local-cache.ts  messages-sync.ts  p2p-event-handlers.test.ts  p2p-event-handlers.ts  p2p-events.svelte.ts  p2p-events.test.ts  presence-sync.test.ts  presence.svelte.ts  profile-grid-layout.ts  profile-photos.ts  (+6 more)
crates/inertia-api/: Cargo.toml
crates/inertia-api/src/: dto.rs  error.rs  lib.rs  main.rs  state.rs  util.rs
crates/inertia-api/src/routes/: archive.rs  blobs.rs  contacts.rs  expiry.rs  feed.rs  health.rs  identity.rs  inbox.rs  invite.rs  media.rs  messages.rs  mod.rs  outbox.rs  p2p.rs  posts.rs  profile.rs  settings.rs
crates/inertia-api/tests/: p2p_events_sse.rs
crates/inertia-core/: Cargo.toml
crates/inertia-core/src/: content.rs  crypto.rs  engine.rs  error.rs  expiry.rs  identity.rs  invite.rs  lib.rs  storage.rs  store_handle.rs  user_error.rs
crates/inertia-core/src/engine/: activity.rs  backup.rs  blobs.rs  contacts.rs  feed.rs  identity.rs  invite.rs  media.rs  messaging.rs  mod.rs  outbox.rs  p2p.rs  p2p_status.rs  profile.rs  relay_dial.rs  relay_list.rs  settings.rs
crates/inertia-core/src/p2p/: behaviour.rs  codec.rs  envelopes.rs  events.rs  handlers.rs  keypair.rs  mod.rs  multiaddr.rs  node.rs  protocol.rs  swarm_task.rs
crates/inertia-core/src/storage/: archive.rs  blobs.rs  contacts.rs  feed.rs  identity.rs  inbox.rs  invites.rs  media.rs  mod.rs  outbox.rs  profile.rs  purge.rs  schema.rs  settings.rs  sql.rs
crates/inertia-core/tests/: relay_probe_cache.rs  two_peer_local.rs
crates/inertia-relay/: Cargo.toml  README.md
crates/inertia-relay/src/: config.rs  main.rs
docker/: Dockerfile
docker/relay/: Dockerfile  docker-compose.yml
docs/: ARCHIVE-P2P.md  CAPACITOR.md  DESIGN.md  GIT-WORKFLOW.md  LINUX-SETUP.md  LIVE-SYNC.md  MILESTONE-VPS-RELAY.md  P2P-EXPERIMENT.md  RELAY-CONNECTIVITY.md  RELAY-INVITE-TODO.md  RELEASE.md  SECURITY-TODO.md  TAURI.md  VIDEO-P2P-PLAN.md  VISION.md  VPS-RELAY.md  WINDOWS-SETUP.md  logo-explorations.html  logo-mutual-link.html  logo-rounded-square.html  post-ui-mockups.html  profile-header-explorations.html  ui-messages-explorations.html  ui-profile-post-expand.html  ui-style-explorations.html  ui-style-sandstone-midnight.html
docs/archive/: VIDEO-DEBUG-PANEL.md
docs/screenshots/: demo.webm
scripts/: adb-reverse.ps1  adb-reverse.sh  android-run-device.ps1  android-run-device.sh  api-logs.ps1  api-logs.sh  build-android-api.ps1  build-android-api.sh  p2p-docker-peer.ps1  p2p-docker-post.ps1  package-android.ps1  package-android.sh  package-desktop.ps1  package-desktop.sh  package-windows.ps1  refresh-path.ps1  release-pr.ps1  release-pr.sh  release-tag.ps1  release-tag.sh  run-desktop.cmd  run-desktop.ps1  run-native.mjs  run-windows.cmd  run-windows.ps1  setup-android-sdk.ps1  setup-android-sdk.sh  setup-windows-install.cmd  setup-windows.cmd  setup-windows.ps1  start-api-window.ps1  start-api-window.sh  stop-api.ps1  stop-api.sh  sync-android-version.mjs  sync-desktop-version.mjs  update-and-run-windows.cmd  update-windows.cmd  update-windows.ps1  vps-ssh.ps1  (+1 more)
scripts/lib/: android-env.sh
scripts/run-native/: desktop.mjs
scripts/windows/: run.ps1  update.cmd  update.ps1
tools/inertia-lint/: Cargo.toml
tools/inertia-lint/src/: main.rs
tools/windows-vm/: README.md  docker-compose.yml  guest-build.ps1  guest-setup.ps1  host-smoke-check.sh
(+63 files in other folders)
