[workspace]
resolver = "2"
members = [
    "crates/inertia-core",
    "crates/inertia-api",
    "crates/inertia-relay",
    "tools/inertia-lint",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "macros", "request-response", "identify"] }
futures = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
