[package]
name = "inertia-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local HTTP API bridge between SvelteKit and inertia-core"

[[bin]]
name = "inertia-api"
path = "src/main.rs"

[dependencies]
inertia-core = { path = "../inertia-core" }
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
