[package]
name = "inertia-desktop"
version = "0.15.0"
description = "Inertia desktop shell (Tauri + local inertia-api sidecar)"
authors = ["Inertia"]
edition = "2021"
license = "AGPL-3.0-or-later"

# Separate from the repo Rust workspace (own target/ + Tauri deps).
[workspace]

[lib]
name = "inertia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
libc = "0.2"
